--- a/index.html
+++ b/index.html
@@ -1,30 +1,70 @@
 <!DOCTYPE html>
-<html ng-app lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
-
-<head profile="http://gmpg.org/xfn/11">
-<meta charset="utf-8" />
-<title>Your Music, Your Style :: Wardrobe.FM</title>
-<meta name="description" content="Wardrobe.FM: Your music, your style" />
-
-<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="css/normalize.css" />
-<link rel="stylesheet" href="css/style.css" />
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js" />
-<!--[if IE]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-
-</head>
-<body >
-    <div>
-      <label>Name:</label>
-      <input type="text" ng-model="yourName" placeholder="Enter a name here">
-      <hr>
-      <h1>Hello {{yourName}}!</h1>
-    </div>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js" />
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js" />
-    <script src="/js/vendor/modernizr-2.8.3.js" />
-    <script src="/js/vendor/html5shiv.js" />
-</body>
+<html ng-app="artistBio" lang="en" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
+  <head>
+    <head profile="http://gmpg.org/xfn/11">
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <title>Home Page! - WardrobeFM</title>
+      <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic" type="text/css">
+      <link rel="stylesheet" href="css/normalize.css">
+      <link rel="stylesheet" href="css/style.css">
+      <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+    </head>
+  </head>
+  <body ng-controller="artistListController as artistList">
+    <header id="header">
+      <nav id="menu">
+        <ul>
+          <li><a href="#" title="About Wardrobe.FM">About</a></li>
+          <li class="last"><a href="#" title="Get help">Help</a></li>
+        </ul>
+      </nav>
+      <div id="searchContainer">
+        <h1>Wardrobe.FM</h1>
+        <div id="search">
+          <form id="searchform" name="searchform" ng-submit="artistList.addArtist()">
+            <input type="text" name="s" placeholder="Enter your favorite band name" autocomplete="off" autofocus required aria-required="true" ng-model="artistList.artistText">
+            <button type="submit">Search</button>
+          </form>
+        </div>
+      </div>
+    </header>
+    <section data-role="content">
+      <section id="resultscontainer">
+        <div id="results">
+          <div data-module="artist-bio">
+            <ul class="nolist">
+              <li ng-repeat="artist in artistList.artists" class="cell"><span>{{artist.text}}</span>
+                <div class="artistbio">
+                  <h2>{{artist.artistName}}</h2>
+                  <p ng-bind-html="artistBio"></p>
+                  <p>{{artist.tours}}</p><img src="{{artist.pic}}" alt="{{artist.name}}">
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div id="resultsRight">
+            <div class="artistbio">
+              <div id="resultsheading">
+                <h2> </h2>
+              </div>
+              <div id="resultsbio">
+                <p> </p>
+              </div>
+              <div id="resultstours">
+                <p> </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="modal"></div> 
+      </section>
+    </section>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="/js/vendor/modernizr-2.8.3.js"></script>
+    <script src="/js/artist-bio.js"></script>
+  </body>
 </html>
