--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>Home Page! - WardrobeFM</title>
-      <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,300italic" type="text/css">
+      <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans:400,600|Open+Sans+Condensed:300,700|Yanone+Kaffeesatz" type="text/css">
       <link rel="stylesheet" href="css/normalize.css">
       <link rel="stylesheet" href="css/style.css">
       <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
@@ -43,7 +43,6 @@
             <ul class="nolist">
               <li ng-repeat="artist in artistList.artists" class="cell">
                 <div class="artist-meta">
-                  <div class="artist-pic-container"> <img src="{{artist.pic}}" alt="{{artist.name}}"></div>
                   <div class="artist-name">
                     <h2>{{artist.name}}</h2><a ng-click="showDetails = ! showDetails" class="expand">Expand</a>
                   </div>
@@ -56,6 +55,7 @@
                     </div>
                   </div>
                 </div>
+                <div class="artist-pic-container"> <img src="{{artist.pic}}" alt="{{artist.name}}"></div>
               </li>
             </ul>
           </div>
