--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
             <div data-module="post-artist-tags">
               <ul class="nolist">
-                <li ng-repeat="artist in artistList.artists" class="tag">{{artist.text}}</li>
+                <li ng-repeat="artist in artistList.artists" class="tag"><a href="#">{{artist.text}}</a></li>
               </ul>
             </div>
             <div id="post-artist-meta">
@@ -42,10 +42,29 @@
           </form>
         </div>
       </section>
+      <section id="post-list">
+        <div data-module="wfm-post">
+          <article ng-repeat="artist in artistList.artists" class="cell">
+            <div class="artist-pic-container"> <img src="{{artist.pic}}" alt="{{artist.name}}"></div>
+            <div class="artist-meta">
+              <div class="artist-name">
+                <h2>{{artist.name}}</h2><a ng-click="showDetails = ! showDetails" class="expand">Expand</a>
+              </div>
+              <div ng-class="{ 'hidden': ! showDetails }" class="more-info-container">
+                <div class="more-info">
+                  <h3>About {{artist.name}}</h3>
+                  <p ng-bind-html="trustAsHtml(artist.bio)"></p>
+                  <h3>Upcoming Tours</h3>
+                  <p>{{artist.tours}}</p>
+                </div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </section>
     </main>
     <footer></footer>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="/js/vendor/modernizr-2.8.3.js"></script>
     <script src="/js/app.js"></script>
   </body>
